frontend/src/components/Comment/CommentHeader.module.scss
.commentUpdatedTime {
    color: var(--color-gray-500);
    flex-shrink: 0;
    font-size: 12px;
    font-weight: 200;
}

.commentHeader {
    display: grid;
    gap: var(--size-xSmall) var(--size-small);
    grid-template-columns: 30px auto auto;

    &.small {
        gap: 0 var(--size-small);
        grid-template-columns: 30px 1fr;
    }
}

.childrenContainer {
    grid-column-end: 4;
    grid-column-start: 2;

    &.small {
        margin-top: calc(-1 * var(--size-xSmall));
    }
}

.commentAuthor {
    color: var(--text-primary);
    font-size: 14px;
    font-weight: 400;
    line-height: initial;
    margin: 0 !important;
    max-width: 180px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.textContainer {
    display: flex;
    flex-direction: column;

    &.small {
        flex-direction: row;
        gap: 0.5em;
    }
}

.ellipsisButton {
    align-items: center;
    background: transparent;
    border: 0;
    border-radius: var(--button-border-radius);
    cursor: pointer;
    display: flex;
    height: var(--size-large);
    justify-content: center;
    outline: none;
    padding: 0;
    width: var(--size-large);

    &:hover {
        background: var(--color-gray-300);
    }

    &:active {
        background: var(--color-gray-400);
    }
}

.endActions {
    align-self: flex-start;
    column-gap: var(--size-xxSmall);
    display: flex;
    margin-left: auto;
    margin-right: calc(-1 * var(--size-xSmall));
}

.startActions {
    align-self: flex-start;
    display: flex;
}

.footer {
    grid-column-end: -1;
    grid-column-start: 1;
    grid-row-start: 3;
    justify-self: flex-end;
    width: 100%;
}

.topBar {
    align-items: flex-start;
    border-bottom: var(--color-gray-300) solid 1px;
    display: flex;
    height: 28px;
    justify-content: flex-end;
    margin-bottom: 8px;
    margin-left: -20px;
    padding-left: 20px;
    padding-right: 26px;
    width: 115%;
}

.errorTopBar {
    margin-left: -12px;
    padding-left: 20px;
    padding-right: 26px;
    width: 109%;
}

